; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_children.c_fpm_child_free.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_children.c_fpm_child_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpm_child_s = type { %struct.fpm_child_s* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fpm_child_s*)* @fpm_child_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fpm_child_free(%struct.fpm_child_s* %0) #0 {
  %2 = alloca %struct.fpm_child_s*, align 8
  store %struct.fpm_child_s* %0, %struct.fpm_child_s** %2, align 8
  %3 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %4 = getelementptr inbounds %struct.fpm_child_s, %struct.fpm_child_s* %3, i32 0, i32 0
  %5 = load %struct.fpm_child_s*, %struct.fpm_child_s** %4, align 8
  %6 = icmp ne %struct.fpm_child_s* %5, null
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %9 = getelementptr inbounds %struct.fpm_child_s, %struct.fpm_child_s* %8, i32 0, i32 0
  %10 = load %struct.fpm_child_s*, %struct.fpm_child_s** %9, align 8
  %11 = call i32 @zlog_stream_close(%struct.fpm_child_s* %10)
  %12 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %13 = getelementptr inbounds %struct.fpm_child_s, %struct.fpm_child_s* %12, i32 0, i32 0
  %14 = load %struct.fpm_child_s*, %struct.fpm_child_s** %13, align 8
  %15 = call i32 @free(%struct.fpm_child_s* %14)
  br label %16

16:                                               ; preds = %7, %1
  %17 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %18 = call i32 @free(%struct.fpm_child_s* %17)
  ret void
}

declare dso_local i32 @zlog_stream_close(%struct.fpm_child_s*) #1

declare dso_local i32 @free(%struct.fpm_child_s*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
